convert to use safeArea viewLayoutGuide instead of layoutGuides

--- a/CCIP/CCIP/Base.lproj/LaunchScreen.storyboard
+++ b/CCIP/CCIP/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="17A315i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -13,10 +14,6 @@
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Llm-lL-Icb"/>
-                        <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -30,8 +27,9 @@
                             <constraint firstItem="roj-JR-9r3" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="GJZ-Nn-vUt"/>
                             <constraint firstItem="roj-JR-9r3" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" id="HM1-R0-gDf"/>
                             <constraint firstItem="roj-JR-9r3" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="IJ3-C8-g28"/>
-                            <constraint firstItem="roj-JR-9r3" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="wJK-mc-VrW"/>
+                            <constraint firstItem="roj-JR-9r3" firstAttribute="centerX" secondItem="n3f-kt-vLN" secondAttribute="centerX" id="wJK-mc-VrW"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="n3f-kt-vLN"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -40,6 +38,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="LaunchScreen.png" width="375" height="812"/>
+        <image name="LaunchScreen.png" width="375" height="811"/>
     </resources>
 </document>
